[package]
name = "lsx"
version = "0.2.1"
authors = ["itn3000 <itn3000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
csv = "1.1"
glob = "0.3"
thiserror = "1.0"
anyhow = "1.0"
clap = "3.0.0-beta.2"
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }