[package]
name = "lsx"
version = "0.3.0"
authors = ["itn3000 <itn3000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
csv = "1.1"
glob = "0.3"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
pelite = "0.9.0"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"